# app/serializers/game_event_serializer.rb
@@ -1,0 +1,7 @@
+class GameEventSerializer < Blueprinter::Base
+  identifier :id
+
+  fields :event_type, :category, :value, :occurred_at, :metadata
+
+  association :player, blueprint: PlayerSerializer
+end
